grammar/specification.bnf
{
  parserClass="gauge.parser.SpecParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Spec"
  psiImplClassSuffix="Impl"
  psiPackage="gauge.language.psi"
  psiImplPackage="gauge.language.psi.impl"

  elementTypeHolderClass="gauge.language.token.SpecTokenTypes"
  elementTypeClass="gauge.language.token.SpecElementType"
  tokenTypeClass="gauge.language.token.SpecTokenType"

  // psiImplUtilClass="gauge.language.psi.SpecPsiImplUtil"
}

/**
* .spec / .cpt ファイルのトップレベル構造。
* 以下いずれの構造も受け入れる:
*  - .spec: 1つ以上の specDetail + 0個以上の scenario
*  - .cpt:  1つ以上の specDetail (concept 定義が並ぶ)
*/
specFile ::= specDetail+ scenario*

/**
 * scenarioHeading: シナリオの見出し
 * (step | comment | tag)*: 0個以上のステップ・コメント・タグ
 */
scenario ::= scenarioHeading (step | comment | tag)*

/**
 * ステップ要素(STEPのトークンで認識する)
 * table?: オプションでテーブル
 */
step ::= STEP table?
table ::= TABLE_HEADER TABLE_ROW*

/**
 * spec / concept 見出しブロック
 * (comment | tag)*: 0個以上のコメント・タグ
 * specHeading: 見出し
 * table?: オプションでテーブル
 * (step | comment | tag)*: 0個以上のステップ・コメント・タグ
 */
private specDetail ::= (comment | tag)*  specHeading table? (step | comment | tag)*

// コメント要素(COMMENTのトークンで認識する)
private comment ::= COMMENT

// タグ要素(TAGのトークンで認識する)
private tag ::= TAG

private specHeading ::= SPEC_HEADING
private scenarioHeading ::= SCENARIO_HEADING
